--- a/index.html
+++ b/index.html
@@ -153,38 +153,30 @@
 
   <!-- 営業DXスターター90導線 -->
 <section class="service-entry">
-  <div class="service-entry__inner">
+  <div class="section">
+    <div class="service-entry__inner">
 
-    <p class="service-entry__label">
-      営業DXスターター90（Starter-90）
-    </p>
+      <p class="service-entry__label">営業DXスターター90（Starter-90）</p>
+      <h2 class="service-entry__title">営業の土台を90日で整える</h2>
+      <p class="service-entry__text">
+        見える化 → 仕組み化 → 実運用 → 定着化。<br>
+        現状を整理し、「使われ、回る営業体制」を一緒につくります。
+      </p>
 
-    <h2 class="service-entry__title">
-      営業の土台を90日で整える
-    </h2>
+      <div class="service-entry__actions">
+        <a href="/lp-s90.html" class="btn primary">Starter-90を見る</a>
+        <a href="/contact.html" class="btn secondary">無料で相談する</a>
+      </div>
 
-    <p class="service-entry__text">
-      見える化 → 仕組み化 → 実運用 → 定着化。<br>
-      現状を整理し、「使われ、回る営業体制」を一緒につくります。
-    </p>
-
-    <div class="service-entry__actions">
-      <a href="/lp-s90.html" class="btn primary">
-        Starter-90を見る
-      </a>
-      <a href="/contact.html" class="btn secondary">
-        無料で相談する
-      </a>
     </div>
-
   </div>
 </section>
-
-
   
   <!-- 飲食店向けライトパッケージ導線 -->
 <section class="service-entry">
-  <div class="service-entry__inner">
+  <div class="section">
+    <div class="service-entry__inner">
+
 
     <p class="service-entry__label">
       飲食店向けライトパッケージ
@@ -208,6 +200,7 @@
       </a>
     </div>
 
+    </div>
   </div>
 </section>
 
