--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <div class="service-entry__actions">
         <a href="/lp-s90.html" class="btn primary">Starter-90を見る</a>
-        <a href="/contact.html" class="btn secondary">無料で相談する</a>
+       <!--- <a href="/contact.html" class="btn secondary">無料で相談する</a> --->
       </div>
 
     </div>
@@ -195,9 +195,7 @@
       <a href="/lp-fnb.html" class="btn primary">
         飲食店向けLPを見る
       </a>
-      <a href="/contact.html" class="btn secondary">
-        無料で相談する
-      </a>
+     <!--- <a href="/contact.html" class="btn secondary"> 無料で相談する</a> --->
     </div>
 
     </div>
