--- a/lp-s90.html
+++ b/lp-s90.html
@@ -20,6 +20,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <!-- LP専用（必ず body.lp-s90 スコープで書く） -->
   <link rel="stylesheet" href="/css/lp-s90.css?v=20251216-02" />
+  
+　<script>
+  try { localStorage.setItem('expand_lp_source', 's90'); } catch(e) {}
+</script>
+
 </head>
 
 <body class="lp-s90">
