--- a/lp-fnb.html
+++ b/lp-fnb.html
@@ -18,8 +18,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="/css/styles.css?v=1004">
 　<link rel="stylesheet" href="/css/lp-fnb.css?v=2">
 
+　<script>
+  try { localStorage.setItem('expand_lp_source', 'fnb'); } catch(e) {}
+</script>
 
 </head>
+  
 <body class="lp-fnb" >
 <!-- Google Tag Manager (noscript) -->
 <noscript>
