--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="css/styles.css?v=3">
   <link rel="canonical" href="https://www.fs-expand.co.jp/contact.html">
 
+  <script>
+  try {
+    if (!localStorage.getItem('expand_lp_source')) {
+      // 何も入ってない場合は何もしない（ここで勝手に決めない）
+    }
+  } catch(e) {}
+</script>
+
 </head>
 
 <body>
