--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
       <p>伝わるサイトと運用設計で、成果につなげます。</p>
       <a href="/service-web.html">詳細を見る</a>
     </div>
+    
+    <div class="service-card">
+      <h3>建物運用サポート</h3>
+      <p>
+        ビル・賃貸建物を「使える状態」で維持するために、<br>
+        情報と進行を整理する支援を行っています。
+      </p>
+      <a href="/building-support">詳細を見る</a>
+    </div>
   </div>
 </section>
 
