--- a/building-support.html
+++ b/building-support.html
@@ -45,9 +45,9 @@
         <h1>建物運用の「整理役」としての支援</h1>
 
         <p class="lead">
-          修理はしない。<br>
+    <!--  修理はしない。<br>
           契約もしない。<br>
-          判断は、オーナーが行う。
+          判断は、オーナーが行う。 -->
         </p>
 
         <p>
